--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Color Game</title>
-	<link rel="stylesheet" type="text/css" href="ColorGame.css">
+	<link rel="stylesheet" type="text/css" href="RGB.css">
 </head>
 <body>
 
